fix: invisible popups

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -107,7 +107,7 @@
     margin-bottom: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    opacity: 0;
+    display: none;
     transition: opacity 0.3s ease;
 }
 
@@ -118,7 +118,7 @@
 }
 
 .error-popup.show {
-    opacity: 1;
+    display: block;
 }
 
 .success-popup {
@@ -132,7 +132,7 @@
     margin-bottom: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    opacity: 0;
+    display: none;
     transition: opacity 0.3s ease;
 }
 
@@ -143,7 +143,7 @@
 }
 
 .success-popup.show {
-    opacity: 1;
+    display: block;
 }
 
 .upload-form {
